<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/size_16dp">

        <TextView
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_gravity="start"
            android:text="@string/playlist_maker"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_activity_main"
            android:paddingTop="@dimen/size_12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_24dp"
        android:orientation="vertical">


    <Button style="@style/ButtonActivityMain"
        android:id="@+id/search"
        android:text="@string/search"
        app:icon="@drawable/ic_inactive_24"
        tools:ignore="VisualLintButtonSize" />



    <Button style="@style/ButtonActivityMain"
        android:id="@+id/medialibrary"
        android:text="@string/media_library"
        app:icon="@drawable/ic_library_24"
        tools:ignore="VisualLintButtonSize" />

    <Button style="@style/ButtonActivityMain"
        android:id="@+id/settings"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings_24"
        android:layout_marginBottom="28dp"
        tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
    </LinearLayout>
