<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_creating_playlist"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textFontWeight="400"
        android:layout_marginStart="@dimen/size_24dp"
        android:layout_marginEnd="@dimen/size_8dp"
        android:layout_marginTop="23dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unsaved_data_will_be_lost"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textFontWeight="400"
        android:layout_marginStart="@dimen/size_24dp"
        android:layout_marginEnd="@dimen/size_8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:gravity="end|bottom"
        android:layout_marginStart="@dimen/size_24dp"
        android:layout_marginEnd="@dimen/size_8dp"
        android:layout_marginBottom="@dimen/size_8dp">

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_16sp" />

        <Button
            android:id="@+id/btnFinish"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_16sp"
            android:layout_marginStart="@dimen/size_16dp" />

    </LinearLayout>

</LinearLayout>