<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <Button
            style="@style/ButtonBack"
            android:id="@+id/back" />

        <TextView
            style="@style/TextSettings"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/settings"
            android:textSize="22sp"
            android:paddingStart="@dimen/size_12dp"
            android:paddingTop="14dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="@dimen/size_24dp">

        <TextView
            style="@style/TextStyleSettings"
            android:text="@string/black_team" />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="12dp"
            android:checked="true"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            app:thumbTint="@color/switch_thumb"
            app:trackTint="@color/switch_track"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/share_app_container"
        android:layout_width="match_parent"
        android:layout_height="61dp">
        <TextView
            style="@style/TextStyleSettings"
            android:text="@string/share_app" />

        <ImageView
            style="@style/ImageSettings"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_share_24"
            tools:ignore="ImageContrastCheck" />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/support_container"
        android:layout_width="match_parent"
        android:layout_height="61dp">
        <TextView style="@style/TextStyleSettings"
            android:text="@string/write_to_support" />

        <ImageView
            style="@style/ImageSettings"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_support_24"
            tools:ignore="ImageContrastCheck" />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/user_agreement"
        android:layout_width="match_parent"
        android:layout_height="61dp">
        <TextView
            style="@style/TextStyleSettings"
            android:text="@string/user_agreement" />

        <ImageView
            style="@style/ImageSettings"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_arrow_forward_24"
            tools:ignore="ImageContrastCheck" />
    </FrameLayout>


</LinearLayout>
